--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,7 @@
 - name: Docker
-  percentage: 70
-  color: primary
+  docs: https://www.docker.com
+  badge: https://img.shields.io/badge/docker-%230db7ed.svg?style=for-the-badge&logo=docker&logoColor=white
 
 - name: Git
-  percentage: 75
-  color: light
+  docs: https://git-scm.com
+  badge: https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white
